--- a/SunriseSunset.Test/SunriseSunset.Test.csproj
+++ b/SunriseSunset.Test/SunriseSunset.Test.csproj
@@ -69,6 +69,7 @@
   <ItemGroup>
     <Compile Include="SunriseSunsetTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="_globalSetup.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SunriseSunset.Abstractions\SunriseSunset.Abstractions.csproj">
